syntax = "proto3";

package auth.v1;
option go_package = "tsu-self/internal/rpc/generated/auth";

import "google/protobuf/timestamp.proto";
import "common/common.proto";

// ===== 登录相关 =====
message LoginRequest {
  string identifier = 1;  // 用户名或邮箱
  string password = 2;     // 密码
  string client_ip = 3;    // 客户端IP
  string user_agent = 4;   // 用户代理
}

message LoginResponse {
  bool success = 1;          // 登录是否成功
  string token = 2;          // 访问令牌
  string refresh_token = 3;  // 刷新令牌
  string identity_id = 4;    // Kratos 身份ID
  common.v1.UserInfo user_info = 5; // 用户信息
  int64 expires_in = 6;      // 令牌过期时间（秒）
  string error_message = 7;  // 错误信息
}

// ===== 注册相关 =====
message RegisterRequest {
  string email = 1;        // 邮箱
  string username = 2;     // 用户名
  string password = 3;     // 密码
  string phone = 4;        // 手机号
  string client_ip = 5;    // 客户端IP
  string user_agent = 6;   // 用户代理
}

message RegisterResponse {
  bool success = 1;          // 注册是否成功
  string identity_id = 2;    // Kratos 身份ID
  string token = 3;          // 访问令牌
  string refresh_token = 4;  // 刷新令牌
  common.v1.UserInfo user_info = 5; // 用户信息
  string error_message = 6;  // 错误信息
}

// ===== Token 验证相关 =====
message ValidateTokenRequest {
  string token = 1;        // 要验证的令牌
}

message ValidateTokenResponse {
  bool valid = 1;            // 令牌是否有效
  string user_id = 2;        // 用户ID
  common.v1.UserInfo user_info = 3; // 用户信息
  string error_message = 4;  // 错误信息
}

// ===== 登出相关 =====
message LogoutRequest {
  string user_id = 1;      // 用户ID
  string token = 2;        // 要撤销的令牌
}

message LogoutResponse {
  bool success = 1;        // 登出是否成功
  string error_message = 2; // 错误信息
}

// ===== 密码恢复相关 =====
message RecoveryRequest {
  string email = 1;        // 邮箱
}

message RecoveryResponse {
  bool success = 1;        // 是否成功发送恢复邮件
  string error_message = 2; // 错误信息
}